<resources>
    <string name="app_name">Get My Personal Trainer</string>

    //Titles
    <string name="client_info_activity_title">Member\'s Information</string>
    <string name="client_exercise_list_title">Client\'s Exercise</string>
    <string name="change_client_info_activity_title">Change Your Information</string>
    <string name="personal_trainer_list_title">Personal Trainers</string>
    <string name="login_activity_title">Login</string>
    <string name="exercise_information_title">Exercise Information</string>
    <string name="personal_trainer_info_title">Personal Trainer</string>
    <string name="client_main_activity_title">My Exercises</string>
    <string name="create_exercise_title">Create New Exercise</string>
    <string name="client_sign_up_activity_title">Client Sign Up</string>
    <string name="client_sign_up_activity_birthdate">Select Your Birth Date</string>
    <string name="personal_trainer_main_title">Members List</string>
    <string name="choose_sign_in_type_title">Choose Your Account Type</string>
    <string name="personal_trainer_sign_up_title">Personal Trainer Sign Up</string>
    <string name="send_invitation_title">Send Invitation</string>
    <string name="evaluate_personal_trainer_title">Evaluate Your Trainer</string>
    <string name="change_exercise_title">Change Exercise</string>
    <string name="change_personal_trainer_info_title">Change Your Information</string>
    <string name="read_invitation_message_title">Invitations</string>

    //Hints
    <string name="hint_invitation_id">Member ID</string>
    <string name="hint_name">Name</string>
    <string name="hint_id">Login ID</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_body_mass">Body Mass</string>
    <string name="hint_height">Height</string>
    <string name="hint_size">Size</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_score_vote">Score from 0 to 10</string>
    <string name="hint_exercise_name">Exercise Name</string>
    <string name="hint_exercise_emphasis">Exercise Emphasis</string>
    <string name="hint_exercise_number_repetition">Repetitions/Time</string>
    <string name="hint_exercise_number_series">Number Series</string>
    <string name="hint_exercise_interval_between_series">Interval for Series</string>
    <string name="hint_exercise_interval_between_exercise">Interval for Exercise</string>
    <string name="hint_exercise_video">Video Link</string>
    <string name="hint_day_of_week">Exercise Day</string>
    <string name="hint_about_my_self">
        Write about yourself, for example how many years you are working
        as a personal trainer, where you are from, etc.
    </string>
    <string name="hint_exercise_observations"> Exercise Observations  </string>

    //Tags
    <string name="phone_tag">Phone: </string>
    <string name="about_myself_tag">About Myself: </string>
    <string name="id_tag">ID: </string>
    <string name="name_tag">Name: </string>
    <string name="age_tag">Age: </string>
    <string name="weight_tag">Weight: </string>
    <string name="body_mass_tag">Body Mass:  </string>
    <string name="size_tag">Height: </string>
    <string name="password_tag">Password: </string>
    <string name="confirm_password_tag">Confirm password: </string>
    <string name="exercise_name_tag">Name: </string>
    <string name="exercise_emphasis_tag">Emphasis: </string>
    <string name="exercise_number_repetition_tag">Repetitions/Time: </string>
    <string name="exercise_number_series_tag">Series: </string>
    <string name="exercise_interval_between_series_tag">Series interval: </string>
    <string name="exercise_interval_between_exercise_tag">Exercise\'s interval: </string>
    <string name="exercise_video_tag">Video Link: </string>
    <string name="day_of_week_tag">Exercise Day: </string>
    <string name="score_tag">Score</string>
    <string name="observations_tag">Observations: </string>


    //Menu
    <string name="item_change_client_info">Change My Info</string>
    <string name="item_change_personal_info">Change My Info</string>
    <string name="item_my_personal_trainer">My Personal Trainer</string>
    <string name="item_invite_client">Invite Member</string>
    <string name="item_create_public_exercise">Create public exercise</string>
    <string name="item_read_invitation">Invitations</string>
    <string name="item_find_all_personal_trainer">Search New Trainer</string>
    <string name="switch_mode">Light/Dark mode</string>
    <string name="item_my_home">My Home Screen</string>

    //Buttons
    <string name="button_ask_to_be_part_of_the_group">Ask for he/she train you</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_declaim">Declaim</string>
    <string name="button_login">Login</string>
    <string name="button_sign_in">Sign Up</string>
    <string name="button_unsubscribe">Unsubscribe</string>
    <string name="button_personal_trainer_sign_in">Sign Up as a Personal Trainer</string>
    <string name="button_client_sign_in">Sign Up as a Member</string>
    <string name="button_evaluate">Evaluate</string>
    <string name="button_change_exercise">Change Exercise</string>
    <string name="button_remove_exercise">Remove Exercise</string>
    <string name="button_add_exercise">Add New Exercise</string>
    <string name="button_remove_client">Remove Member</string>
    <string name="button_see_client_info">See Member\'s Info</string>

    //Text
    <string name="unknown_info">Unknown</string>
    <string name="blank"> </string>
    <string name="no_invitation">You don\'t have invitation</string>
    <string name="or">OR</string>
    <string name="text_personal_trainer_info">
        The personal trainer did not wrote about himself/herself yet.
    </string>
    <string name="client_received_invitation">
        A personal trainer wants you to be part in his/her group.
        Go to your menu and click in
    </string>
    <string name="personal_trainer_received_invitation">
        A person wants you as his/her personal trainer.
        Go to your menu and click in
    </string>
    <string name="no_personal_trainer">
        You do not have a personal trainer
        to find one go to your menu and click in
    </string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="loading">Loading…</string>
    <string name="loading_image_description">Loading Animation</string>

    //String Array
    <string-array name="weekDays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
