<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id='@+id/background_sign_up_activity'
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context=".ClientSignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_id_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_id"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no" />


            <EditText
                android:id="@+id/edit_text_name_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_text_phone_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textViewBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center"
                android:text="@string/client_sign_up_activity_birthdate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_weight_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_body_mass"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_text_size_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_size"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_text_password_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_text_confirm_password_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/button_confirm_change_client_sign_up_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/good_button_background"
                android:gravity="center"
                android:text="@string/button_confirm"
                android:onClick="ClientSignUp"
                android:textColor="@color/font_dark"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>