<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_create_public_exercise_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context=".CreatePublicExerciseActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <AutoCompleteTextView
                android:id="@+id/edit_text_exercise_name_create_public_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_exercise_name"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_emphasis_create_public_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_exercise_emphasis"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edit_text_video_link_create_public_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_exercise_video"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_observations_create_public_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_exercise_observations"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_confirm_public_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/good_button_background"
                android:gravity="center"
                android:onClick="sendExercise"
                android:text="@string/button_confirm"
                android:textColor="@color/font_dark"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>