<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tag_name_personal_trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/name_tag"
                android:textColor="@color/font_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_name_personal_trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_info"
                android:textColor="@color/font_light"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tag_id_personal_trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/id_tag"
                android:textColor="@color/font_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_id_personal_trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_info"
                android:textColor="@color/font_light"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tag_score_personal_trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/score_tag"
                android:textColor="@color/font_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_score_personal_trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_info"
                android:textColor="@color/font_light"
                android:textSize="16sp" />
        </TableRow>

        <Button
            android:id="@+id/button_send_invitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/good_button_background"
            android:text="@string/button_ask_to_be_part_of_the_group"
            android:textColor="@color/font_dark"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
