<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_evaluate_personal_trainer_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context=".EvaluatePersonalTrainerActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tag_name_evaluate_personal_trainer_info_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/name_tag"
                    android:textColor="@color/font_light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_personal_trainer_name_evaluate_personal_trainer_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/unknown_info"
                    android:textColor="@color/font_light"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tag_score_evaluate_personal_trainer_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/score_tag"
                    android:textColor="@color/font_light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_score_evaluate_personal_trainer_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/unknown_info"
                    android:textColor="@color/font_light"
                    android:textSize="16sp" />
            </TableRow>

            <EditText
                android:id="@+id/edit_text_score_vote_evaluate_personal_trainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_score_vote"
                android:inputType="number"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_confirm_evaluate_personal_trainer_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/good_button_background"
                android:gravity="center"
                android:onClick="sendVote"
                android:text="@string/button_confirm"
                android:textColor="@color/font_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>